[package]
name = "benches"
version = "0.1.0"
authors = ["Franz Heinzmann (Frando) <frando@unbiskant.org>"]
edition = "2018"


[lib]
name = "tcpbench"
path = "src/lib.rs"

[[bin]]
name = "tcpbench"
path = "src/bin.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = "1.5.0"
futures = "0.3.4"
env_logger = "0.7.1"

[dev-dependencies]
criterion = "0.3.2"

[[bench]]
name = "tcp_echo"
harness = false
